# StratStat

./: .gitignore  CMakeLists.txt
database/: README  effects.ods  gen01moves-transform.ods  gen01moves.csv  gen01pkmns.csv  gen1mons.csv
examples/cfgFiles/: allParams.json  cfg.json  errors.json  invalidEngine.json
examples/teams/: enemy.json  usr.json
src/app/: clihandler.cpp  clihandler.hpp  cliparser.cpp  cliparser.hpp  config.cpp  config.hpp  enginewrapper.cpp  enginewrapper.hpp  errors.hpp  logging.cpp  logging.hpp  luawrapper.cpp  luawrapper.hpp  main.cpp  plogcustomformatter.cpp  plogcustomformatter.hpp  tests.cpp  tests.hpp
src/engine/: basemovedatabase.cpp  basemovedatabase.hpp  basemovedef.cpp  basemovedef.hpp  basepkmndatabase.cpp  basepkmndatabase.hpp  basepkmndef.cpp  basepkmndef.hpp  commondatabase.cpp  commondatabase.hpp  commonvaluecollection.cpp  commonvaluecollection.hpp  commonvaluemapvalidationresult.cpp  commonvaluemapvalidationresult.hpp  engine.cpp  engine.hpp  foo.cpp  innerinterface.hpp  interface.cpp  interface.hpp  movedatabase.hpp  movedef.cpp  movedef.hpp  pkmndatabase.cpp  pkmndatabase.hpp  pkmndef.cpp  pkmndef.hpp  shared.cpp  shared.hpp  sharedtypes.cpp  sharedtypes.hpp  types.hpp  validationinterface.hpp  variantdef.cpp  variantdef.hpp
src/engine/gen1/: constants.cpp  constants.hpp  engine.cpp  engine.hpp  gen1.cpp  innerinterface.cpp  inputvalidation.cpp  interface.cpp  movedatabase.cpp  movedatabase.hpp  movedef.cpp  movedef.hpp  pkmndatabase.cpp  pkmndatabase.hpp  pkmndef.cpp  pkmndef.hpp
src/json-schema/: constants.hpp  jsonsetoperations.cpp  jsonsetoperations.hpp  jsonvalidation.cpp  jsonvalidation.hpp  jsonvalidationtionresult.cpp  jsonvalidationtionresult.hpp  jsonvalidationtypes.hpp  node.cpp  node.hpp  specification.cpp  specification.hpp
src/jsonxx-validation/: constants.hpp  jsonsetoperations.hpp  jsonvalidation.cpp  jsonvalidation.hpp  jsonvalidationtionresult.hpp  jsonvalidationtypes.cpp  specification.hpp
src/luawrapper/: indirectwrappable.cpp  indirectwrappable.hpp  keyvaluepair.cpp  keyvaluepair.hpp  lua.hpp  luabasetypes.cpp  luabasetypes.hpp  luacapi.hpp  luacfunction.cpp  luacfunction.hpp  luaerror.cpp  luaerror.hpp  luaerrors.cpp  luaerrors.hpp  luafunctiondescriptor.cpp  luafunctiondescriptor.hpp  luasetoperations.cpp  luasetoperations.hpp  luastate.cpp  luastate.hpp  luatable.cpp  luatable.hpp  luatableconstiterator.cpp  luatableconstiterator.hpp  luatableiterator.cpp  luatableiterator.hpp  luautils.cpp  luautils.hpp  luawrappable.cpp  luawrappable.hpp  luawrapper.hpp  parameterstack.cpp  parameterstack.hpp  state.cpp  state.hpp
src/test/: jsonxxvalidationtest.cpp  jsonxxvalidationtest.hpp  luawrappertest.cpp  luawrappertest.hpp  main.cpp  testjsonxxvalidation.cpp  testjsonxxvalidation.hpp
test/: jsonTestCase.json
test/LuaWrapper/: identity.lua  malformed.lua  parameters.lua
test/jsonxxValidation/: allTypes.json  mutexGroups.json
